--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Permanent+Marker&display=swap');
 /**
 * Template Name: Bikin
 * Updated: May 30 2023 with Bootstrap v5.3.0
@@ -134,7 +135,8 @@ h6 {
 }
 
 #header .logo a {
-  color: #2d405f;
+  color: #5E17EB;
+  font-family: 'Lobster', cursive;
 }
 
 #header .logo img {
@@ -389,13 +391,32 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: white;
   border-bottom: 2px solid white;
   text-align: center;
 }
 
 #hero .container {
   padding-top: 70px;
+}
+
+.hero {
+  background-image: url(../img/hero2.png);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 2;
+}
+
+.hero::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(21, 20, 51, 0.8);
+  z-index: -1;
 }
 
 #hero h1 {
@@ -405,14 +426,14 @@ h6 {
   line-height: 56px;
   color: #141d2b;
   width: 60%;
-  color: #2d405f;
+  color: #fcfcfc;
 }
 
 #hero h2 {
-  color: #466393;
+  color: #ffffff;
   margin: 15px 0 0 0;
   font-size: 24px;
-  color: #2d405f;
+  color: #f7f7f7;
 }
 
 #hero .btn-get-started {
@@ -426,11 +447,11 @@ h6 {
   border-radius: 5px;
   transition: 0.5s;
   color: #fff;
-  background: #3b4ef8;
+  background: #5E17EB;
 }
 
 #hero .btn-get-started:hover {
-  background: #0a22f6;
+  background: #5E17EB;
 }
 
 #hero .hero-img {
@@ -484,7 +505,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #2d405f;
+  color: #5E17EB;
 }
 
 .section-title h2::after {
@@ -506,7 +527,7 @@ section {
 # About
 --------------------------------------------------------------*/
 .about {
-  background: #466393;
+  background: #5E17EB;
   background-size: cover;
   padding: 60px 0;
   position: relative;
@@ -551,7 +572,7 @@ section {
 
 .about .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #b6bdfc;
+  color: #5E17EB;
   margin-bottom: 10px;
 }
 
@@ -627,7 +648,7 @@ section {
 .features .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #3b4ef8;
+  color: #5E17EB;
 }
 
 .features .content p:last-child {
@@ -656,7 +677,7 @@ section {
   display: block;
   font-size: 24px;
   font-weight: 400;
-  color: #3b4ef8;
+  color: #5E17EB;
 }
 
 .steps .content-item h4 {
@@ -684,7 +705,7 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services {
-  background: #2d405f;
+  background: #5E17EB;
   padding-bottom: 80px;
 }
 
@@ -718,7 +739,7 @@ section {
 .services .icon i {
   font-size: 32px;
   line-height: 1;
-  color: #2d405f;
+  color: #5E17EB;
   background: #eff2f8;
   padding: 20px;
   border-radius: 50px;
@@ -732,12 +753,12 @@ section {
 }
 
 .services .title a {
-  color: #2d405f;
+  color: #5E17EB;
   transition: 0.3s;
 }
 
 .services .title a:hover {
-  color: #4e6fa4;
+  color: #5E17EB;
 }
 
 .services .description {
@@ -777,7 +798,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #3b4ef8;
+  background: #5E17EB;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -890,11 +911,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #3b4ef8;
+  border: 1px solid #5E17EB;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #3b4ef8;
+  background-color: #5E17EB;
 }
 
 .portfolio-details .portfolio-info {
@@ -1006,11 +1027,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #3b4ef8;
+  border: 1px solid #5E17EB;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #3b4ef8;
+  background-color: #5E17EB;
 }
 
 /*--------------------------------------------------------------
@@ -1121,12 +1142,12 @@ section {
   font-size: 18px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #2d405f;
+  color: #5E17EB;
 }
 
 .pricing .box h4 {
   font-size: 42px;
-  color: #3b4ef8;
+  color: #5E17EB;
   font-weight: 500;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 20px;
@@ -1147,7 +1168,7 @@ section {
 .pricing .box ul {
   padding: 0;
   list-style: none;
-  color: #2d405f;
+  color: #5E17EB;
   text-align: center;
   line-height: 20px;
   font-size: 14px;
@@ -1158,7 +1179,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #3b4ef8;
+  color: #5E17EB;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1175,7 +1196,7 @@ section {
 
 .pricing .box .btn-buy {
   background: #eceefe;
-  color: #3b4ef8;
+  color: #5E17EB;
   display: inline-block;
   padding: 10px 40px 12px 40px;
   border-radius: 5px;
@@ -1188,12 +1209,12 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #3b4ef8;
+  background: #5E17EB;
   color: #fff;
 }
 
 .pricing .featured {
-  background: #466393;
+  background: #5E17EB;
   box-shadow: none;
 }
 
@@ -1212,7 +1233,7 @@ section {
 
 .pricing .featured .btn-buy:hover {
   background: #fff;
-  color: #4e6fa4;
+  color: #5E17EB;
 }
 
 /*--------------------------------------------------------------
@@ -1236,13 +1257,13 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #3b4ef8;
+  font-family: #5E17EB;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   padding-left: 25px;
   cursor: pointer;
-  color: #0a22f6;
+  color: #5E17EB;
   transition: 0.3s;
 }
 
@@ -1293,7 +1314,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #3b4ef8;
+  color: #5E17EB;
   padding: 8px;
 }
 
@@ -1379,7 +1400,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #3b4ef8;
+  background: #5E17EB;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1388,7 +1409,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #0a22f6;
+  background: #5E17EB;
 }
 
 @keyframes animate-loading {
@@ -1425,7 +1446,7 @@ section {
 .breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #3d5782;
+  color: #5E17EB;
   content: "/";
 }
 
@@ -1454,7 +1475,7 @@ section {
   padding: 2px 0 2px 0;
   line-height: 1;
   font-weight: 700;
-  color: #2d405f;
+  color: #5E17EB;
 }
 
 #footer .footer-top .footer-contact p {
@@ -1462,13 +1483,13 @@ section {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Krub", sans-serif;
-  color: #4e6fa4;
+  color: #5E17EB;
 }
 
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #2d405f;
+  color: #5E17EB;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1485,7 +1506,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #6c7afa;
+  color:#5E17EB;
   font-size: 18px;
   line-height: 1;
 }
@@ -1509,7 +1530,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #3b4ef8;
+  color: #5E17EB;
 }
 
 #footer .footer-newsletter {
@@ -1519,7 +1540,7 @@ section {
 #footer .footer-newsletter h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #2d405f;
+  color: #5E17EB;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1549,7 +1570,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #3b4ef8;
+  background: #5E17EB;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 5px 5px 0;
@@ -1557,7 +1578,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #0a22f6;
+  background: #5E17EB;
 }
 
 #footer .credits {
@@ -1570,7 +1591,7 @@ section {
   font-size: 18px;
   display: inline-block;
   background: #e7eafe;
-  color: #3b4ef8;
+  color: #5E17EB;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -1582,7 +1603,14 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #3b4ef8;
+  background: #5E17EB;
   color: #fff;
   text-decoration: none;
+}
+
+h1{
+  font-family: 'Lobster', cursive;
+}
+h2{
+  font-family: 'Lobster', cursive;
 }
